Speed up window placement